--- a/settings.json
+++ b/settings.json
@@ -5,10 +5,33 @@
     "city":["坊子区"],
 
     "unit":"SI",                    //单位制选择，详见彩云天气api文档
-    "unitexcept":{
+    "unitexcept":{//单位制例外：替换"unit"中选择的单位体系中部分单位，详见
         "precipitation":"metric:v2",
         "temp":"metric:v2",
         "pressure":"hPa",
         "visibility":"metric:v2"
-    }//单位制例外：替换"unit"中选择的单位体系中部分单位，详见
+    },
+
+    "skycorn":{//天气描述和图标
+        "CLEAR_DAY":"晴 ☀",
+        "CLEAR_NIGHT":"晴 🌙",
+        "PARTLY_CLOUDY_DAY":"多云 🌥",
+        "PARTLY_CLOUDY_NIGHT":"多云 🌥",
+        "CLOUDY":"阴 ☁",
+        "LIGHT_HAZE":"轻度雾霾 🌫",
+        "MODERATE_HAZE":"中度雾霾 🌫",
+        "HEAVY_HAZE":"重度雾霾 🌫",
+        "LIGHT_RAIN":"小雨 🌧",
+        "MODERATE_RAIN":"中雨 🌧",
+        "HEAVY_RAIN":"大雨 🌧",
+        "STORM_RAIN":"暴雨 🌧",
+        "FOG":"雾 🌫",
+        "LIGHT_SNOW":"小雪 🌨",
+        "MODERATE_SNOW":"中雪 🌨",
+        "HEAVY_SNOW":"大雪 🌨",
+        "STORM_SNOW":"暴雪 🌨",
+        "DUST":"浮尘",
+        "SAND":"沙尘",
+        "WIND":"大风"
+    }
 }
