--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
         "visibility":"metric:v2"
     },
 
-    "skycorn":{//天气描述和图标
+    "skycon":{//天气描述和图标
         "CLEAR_DAY":"晴 ☀",
         "CLEAR_NIGHT":"晴 🌙",
         "PARTLY_CLOUDY_DAY":"多云 🌥",
